Fixed problems with alignment, moving to fix a known error with GTO

--- a/css/index.css
+++ b/css/index.css
@@ -104,9 +104,7 @@
     .why-twitch{
         text-align: center;
     }
-    .info-wrapper{
-        margin-right: 1.5rem;
-    }
+
 /* Id css starts here */
     #page-navigation {
         position: fixed;
